// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/Ship Image Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="aircraft.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="battleship.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="carriership.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="submarine.png"
  />
</div>
`;

exports[`Storyshots game/GameScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqNJr gjMQXT"
  >
    <div
      className="sc-fzoXzr fQqoaX"
    >
      <div
        className="sc-fzpjYC dsySeg"
      >
        <div
          className="sc-fzoyAV uphNT"
        >
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Hits
            </span>
          </div>
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Shots
            </span>
          </div>
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Turns
            </span>
          </div>
        </div>
        <div
          className="sc-fzoLag JhxoW"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Grid Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxmLO hBfirI"
  >
    <div
      className="sc-fzozJi jsUOtl"
    />
    <span
      className="sc-fzoLsD iPnbQW"
    >
      1
    </span>
    <span
      className="sc-fzoLsD eijXTv"
    >
      2
    </span>
    <span
      className="sc-fzoLsD cwSGcM"
    >
      3
    </span>
    <span
      className="sc-fzoLsD csBbVZ"
    >
      4
    </span>
    <span
      className="sc-fzoLsD dNIGXy"
    >
      5
    </span>
    <span
      className="sc-fzoLsD kwbmyT"
    >
      6
    </span>
    <span
      className="sc-fzoLsD iGYfpM"
    >
      7
    </span>
    <span
      className="sc-fzoLsD iCGBiZ"
    >
      8
    </span>
    <span
      className="sc-fzoLsD bWDKUJ"
    >
      9
    </span>
    <span
      className="sc-fzoLsD kFQpAI"
    >
      10
    </span>
    <span
      className="sc-fzoLsD hufJsq"
    >
      A
    </span>
    <span
      className="sc-fzoLsD hufVQr"
    >
      B
    </span>
    <span
      className="sc-fzoLsD huemuE"
    >
      C
    </span>
    <span
      className="sc-fzoLsD hueySF"
    >
      D
    </span>
    <span
      className="sc-fzoLsD hueLvy"
    >
      E
    </span>
    <span
      className="sc-fzoLsD hueXTz"
    >
      F
    </span>
    <span
      className="sc-fzoLsD hudikA"
    >
      G
    </span>
    <span
      className="sc-fzoLsD huduIB"
    >
      H
    </span>
    <span
      className="sc-fzoLsD gBCIAZ"
    >
      I
    </span>
    <span
      className="sc-fzoLsD gBLffg"
    >
      J
    </span>
    <div
      className="sc-AxheI dkMvPd"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cWBCjY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gDzawP"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ckZLJu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ivKgRh"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ihznmc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jQlPwL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fxMAJq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kNfTwS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gOBcCL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI elrMBk"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dzYfxl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hdTXwy"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI doGIJf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jwpxDo"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iKVQzp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kqGMwu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gBtxJb"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jMACKL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hPgtoS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hOtCwP"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kNKdFe"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI PWHCN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI lauxbI"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hAVAqf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kAmbyu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jBfjLx"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iwhpLw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI syQyY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hJpJdN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iOYTiW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fZZdDT"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bqrECw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gMTQMV"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iBARcm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fMBbxj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kbAgLg"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eiGJwJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kHpjlN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iJUZPU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI pmxGZ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bbEbU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jyYYET"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fgzJRy"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bOvAp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI lcZlug"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gULRoH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cCmCBm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hRFVoO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dTbeuH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bpROtg"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI Eyhph"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jZtVEC"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gkgGRj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bctMmw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI rafix"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hvgOoq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dFTzAX"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gRaECH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eTGvgO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI frEhsv"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iqUIAK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dRCZHh"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cMFfHg"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kCBSuz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cmwKdS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gzyRHd"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fuAXHc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jlfeTA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fmAnZt"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gsjyeC"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dDjIzz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI erXWGQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jOAiRp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI nLzHK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iOhtBD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gZTOGM"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bharsp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ikzOht"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gnfELA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fJLxrW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI wFbUT"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hPXCHE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iBfnuZ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI izvshe"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dmoWKb"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jGgShY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kroCVt"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eifTWx"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iQMhGw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eYiLUn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iLmtgm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI faOIIR"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hDXdIA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hNSGJv"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI lAEwy"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gQXYjl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jugtiU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eTIFug"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ifjwiN"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game/Header Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxiKw eZBBTM"
  >
    <span
      className="sc-AxhCb gRgvjz"
    >
      BATTLESHIP
    </span>
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="aircraft.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="battleship.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="carriership.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="submarine.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Stat Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznxsB hgwTrS"
  >
    <div
      className="sc-fzpans DoiQQ"
    >
      <span
        className="sc-fzplWN iyluzC"
      >
        10
      </span>
      <span
        className="sc-fznyAO FULts"
      >
        Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Tile Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznJRM ioNmAn"
  >
    <div
      className="sc-AxheI dkMvPd"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game-mode/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznWqX hSCJuZ"
    onClick={[Function]}
  >
    READY
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Custom 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="submarine.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          X turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        CUSTOM
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Easy 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="carriership.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          Infinite turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        EASY
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Easy Selected 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="carriership.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          Infinite turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        EASY
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Hard 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="aircraft.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          50 turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        HARD
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Medium 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="battleship.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          100 turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        MEDIUM
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/GameModeScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoXWK hfRKIb"
  >
    <div
      className="sc-fzpmMD bfTJXD"
    >
      <div
        className="sc-AxgMl iluWPs title"
      >
        GAME MODE
      </div>
      <div
        className="sc-fznxKY gVOHtM"
      >
        <div
          className="sc-fznMAR dAXQDs"
        >
          <div
            className="sc-fznMAR dAXQDs"
          >
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="carriership.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    Infinite turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  EASY
                </span>
              </div>
            </div>
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="battleship.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    100 turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  MEDIUM
                </span>
              </div>
            </div>
          </div>
          <div
            className="sc-fznMAR dAXQDs"
          >
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="aircraft.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    50 turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  HARD
                </span>
              </div>
            </div>
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="submarine.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    X turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  CUSTOM
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-fznWOq eMWkWE"
        />
      </div>
      <div
        className="sc-fznWqX duFGYY"
        onClick={[Function]}
      >
        READY
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxgMl iluWPs"
  >
    GAME MODE
  </div>
</div>
`;

exports[`Storyshots home/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxirZ kgiUck"
    onClick={[Function]}
  >
    PRUEBA
  </div>
</div>
`;

exports[`Storyshots home/HomeScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoxKX IXneK"
  >
    <div
      className="sc-fzoKki kEDozA"
    >
      <div
        className="sc-fzqPZZ kxteNN title"
      >
        BATTLESHIP
      </div>
      <div
        className="sc-AxirZ kgiUck"
        onClick={[Function]}
      >
        NEW GAME
      </div>
      <div
        className="sc-AxirZ kgiUck"
      >
        LEADERBOARD
      </div>
      <div
        className="sc-AxirZ kgiUck"
      >
        OPTIONS
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots home/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqPZZ kxteNN"
  >
    BATTLESHIP
  </div>
</div>
`;
